# pytest-uncollect-if

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.rst  mkdocs.yml  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: main.yml  release.yaml  release.yml
docs/: index.md
src/pytest_uncollect_if/: __init__.py  plugin.py
tests/: test_uncollect_if.py
